log/build_2025-01-19_21-54-18/autonomous_rov/stderr.log
  File "/home/projet_sysmer/ros2_ws/install/autonomous_rov/lib/python3.10/site-packages/autonomous_rov/visual_servoing.py", line 190
    f'{yaw_left_right}, {self.thruttle}, {}')
                                            ^
SyntaxError: f-string: empty expression not allowed

